--- a/README
+++ b/README
@@ -1,9 +1,22 @@
-Twitter Bootstrap JAR
+Bootstrap WebJar
+
+Current GroupId:
+org.webjars
+
+Current ArtifactId:
+bootstrap
 
 Current Version:
-2.1.0
+2.1.1
+
+Current Layout:
+META-INF/resources/webjars/bootstrap/2.1.1/js/bootstrap.js
+META-INF/resources/webjars/bootstrap/2.1.1/js/bootstrap.min.js
+META-INF/resources/webjars/bootstrap/2.1.1/img/glyphicons-halflings-white.png
+META-INF/resources/webjars/bootstrap/2.1.1/img/glyphicons-halflings.png
+META-INF/resources/webjars/bootstrap/2.1.1/css/bootstrap.min.css
+META-INF/resources/webjars/bootstrap/2.1.1/css/bootstrap.css
+META-INF/resources/webjars/bootstrap/2.1.1/css/bootstrap-responsive.css
+META-INF/resources/webjars/bootstrap/2.1.1/css/bootstrap-responsive.min.css
 
 Previous Versions:
-2.0.4
-2.0.2
-2.0.3
